--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ langchain-community==0.4.1
 
 # Vector database 
 langchain-pinecone==0.2.13
-pinecone-client>=3.0.0
+pinecone>=3.0.0
 
 # Extração de textos
 pdfplumber>=0.10.0
