feat: IMplementação de RAG completa

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,10 @@ langchain-community==0.4.1
 langchain-pinecone==0.2.13
 pinecone>=3.0.0
 
+# Chunking correto e controle de tokens
+langchain-text-splitters==1.1.0
+tiktoken==0.12.0
+
 # Extração de textos
 pdfplumber>=0.10.0
 
-# Chunking correto e controle de tokens
-tiktoken==0.12.0
